# pipe-audit-core-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  example.env  example.profiles.toml  migration_plan.txt
.github/: copilot-instructions.md
.github/workflows/: crates_deploy.yml  release.yml
contracts/: example.toml  people.toml  regions.toml  sample_contact.toml
pipa/: Cargo.toml  README.md
pipa-cli/: cargo.toml
pipa-cli/src/: cli.rs  commands.rs  main.rs
pipa-cli/src/commands/: contract.rs  health.rs  init.rs  logs.rs  profile.rs  run.rs
pipa-core/: Cargo.toml  README.md
pipa-core/src/: connectors.rs  contracts.rs  drivers.rs  lib.rs  logging.rs  movement.rs  validators.rs
pipa-core/src/connectors/: gcs.rs  s3.rs  sftp.rs
pipa-core/src/contracts/: column.rs  schema.rs
pipa-core/src/drivers/: parquet.rs
pipa-core/src/engine/: contracts.rs  init.rs  logging.rs  logs.rs  profiles.rs  system.rs
pipa-core/src/engine/contracts/: meta.rs  runner.rs
pipa-core/src/logging/: error.rs  init.rs  jsonl_logger.rs  ledger.rs  logger_trait.rs  noop_logger.rs  schema.rs  verify.rs  writer.rs
pipa-core/src/validators/: column.rs
pipa-core/src/validators/column/: completeness.rs  date_format.rs  in_set.rs  max_length.rs  mean_between.rs  not_in_set.rs  not_null.rs  pattern.rs  range.rs  stdev_between.rs  type_validator.rs  unique.rs
pipa/src/: cli.rs  connectors.rs  contracts.rs  drivers.rs  engine.rs  lib.rs  logging.rs  main.rs  movement.rs  profiles.rs  runner.rs  traits.rs  validators.rs
pipa/src/commands/: contract.rs  health.rs  init.rs  logs.rs  profile.rs  run.rs
pipa/src/connectors/: azure.rs  fetch.rs  gcs.rs  local.rs  s3.rs  sftp.rs
pipa/src/contracts/: column.rs  compound.rs  file.rs  schema.rs  types.rs
pipa/src/drivers/: csv.rs  parquet.rs
pipa/src/engine/: contracts.rs  init.rs  logs.rs  orchestration.rs  system.rs  validation.rs
pipa/src/engine/contracts/: meta.rs  runner.rs
pipa/src/logging/: error.rs  ledger.rs  schema.rs  verify.rs  writer.rs
pipa/src/traits/: audit_writer.rs  auth.rs  contract_store.rs
pipa/src/validators/: column.rs  compound.rs  file.rs
pipa/src/validators/column/: boolean.rs  completeness.rs  distinctness.rs  not_in_set.rs  not_null.rs  outlier_sigma.rs  pattern.rs  range.rs  stdev_between.rs  unique.rs
pipa/src/validators/file/: completeness.rs
pipa/tests/: integration.rs  integration_tests.rs
pipa/wix/: main.wxs
src/: api.rs  api_main.rs  cli.rs  commands.rs  connectors.rs  contracts.rs  core.rs  drivers.rs  engine.rs  error.rs  lib.rs  logging.rs  main.rs  movement.rs  profiles.rs  runner.rs  traits.rs  validators.rs
src/api/: handlers.rs  routes.rs  server.rs
src/commands/: auth.rs  contract.rs  health.rs  logs.rs  profile.rs  run.rs  validate.rs
src/connectors/: azure.rs  gcs.rs  local.rs  mod.rs  postgres.rs  s3.rs  sftp.rs
src/contracts/: column.rs  compound.rs  file.rs  schema.rs  types.rs
src/core/: health.rs  limits.rs  orchestration.rs  validation.rs
src/drivers/: csv.rs  parquet.rs
src/engine/: contracts.rs  health.rs  logging.rs  logs.rs  orchestration.rs  profiles.rs  validation.rs
src/logging/: schema.rs  verify.rs
src/traits/: audit_writer.rs  auth.rs  contract_store.rs
src/validators/: column.rs  compound.rs  file.rs
src/validators/column/: boolean.rs  completeness.rs  date_format.rs  distinctness.rs  in_set.rs  max_length.rs  mean_between.rs  not_in_set.rs  not_null.rs  outlier_sigma.rs  pattern.rs  range.rs  stdev_between.rs  type_validator.rs  unique.rs
src/validators/compound/: unique.rs
src/validators/file/: row_count.rs
tests/: integration.rs
