[workspace]
members = [
    "pipa-core",
    "pipa"
]

resolver ="3"

# Optional: if you want to share settings across crates
[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Daniel Wallace"]

[workspace.dependencies]
# You can centralize common deps here if you want
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
