[package]
name = "pipa"
version = "0.1.2"
edition = "2021"
authors = ["Daniel Wallace"]
description = "Command-line interface for the pipa audit engine"
repository = "https://github.com/lokryn-suite/pipe-audit-core-cli"
license = "GPL-3.0-or-later"
license-file = "../LICENSES/GPL-3.0.txt"
keywords = ["cli", "audit", "compliance", "data-quality"]

[dependencies]
# Pull in the core engine from the sibling crate
pipa-core = { path = "../pipa-core" }

# CLI-specific dependencies
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
whoami = "1.6.1"
hostname = "0.4.1"
dotenv = "0.15"
glob = "0.3.3"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "pipa"
path = "src/main.rs"
