[package]
name = "pipe-audit"
version = "0.1.4"
edition = "2021"
authors = ["Daniel Wallace"]
description = "Command-line interface for the pipa audit engine"
repository = "https://github.com/lokryn-suite/pipe-audit-core-cli"
readme = "../README.md"
license = "GPL-3.0-or-later"
keywords = ["cli", "audit", "compliance", "data-quality"]

[dependencies]
# Pull in the core engine from the sibling crate
pipa = { package = "pipe-audit-core", version = "0.1.2" }

# CLI-specific dependencies
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
whoami = "1.6.1"
hostname = "0.4.1"
dotenv = "0.15"
glob = "0.3.3"

[dev-dependencies]
pretty_assertions = "1.4"
assert_cmd = "2"

[[bin]]
name = "pipa"
path = "src/main.rs"
